<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <!-- TITLE -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:textAlignment="center">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/portfolio_title"
            android:textSize="20dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true">

        <!-- APP BUTTONS-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                style="@style/MainAppButton"
                android:text="@string/spotify_button_text" />

            <Button
                style="@style/MainAppButton"
                android:text="@string/super_duo_scores_button_text" />

            <Button
                style="@style/MainAppButton"
                android:text="@string/super_duo_scores_library_text" />

            <Button
                style="@style/MainAppButton"
                android:text="@string/build_it_bigger_button_text" />

            <Button
                style="@style/MainAppButton"
                android:text="@string/xyz_reader_button_text" />

            <Button
                style="@style/MainAppButton"
                android:text="@string/capstone_button_text" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
